src/cpp/parser/BrightScriptParser.cpp

// Generated from BrightScript.g4 by ANTLR 4.7


#include "BrightScriptListener.h"
#include "BrightScriptVisitor.h"

#include "BrightScriptParser.h"


using namespace antlrcpp;
using namespace antlr4;

BrightScriptParser::BrightScriptParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

BrightScriptParser::~BrightScriptParser() {
  delete _interpreter;
}

std::string BrightScriptParser::getGrammarFileName() const {
  return "BrightScript.g4";
}

const std::vector<std::string>& BrightScriptParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& BrightScriptParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StartRuleContext ------------------------------------------------------------------

BrightScriptParser::StartRuleContext::StartRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BrightScriptParser::StartRuleContext::EOF() {
  return getToken(BrightScriptParser::EOF, 0);
}

std::vector<BrightScriptParser::ComponentHeadContext *> BrightScriptParser::StartRuleContext::componentHead() {
  return getRuleContexts<BrightScriptParser::ComponentHeadContext>();
}

BrightScriptParser::ComponentHeadContext* BrightScriptParser::StartRuleContext::componentHead(size_t i) {
  return getRuleContext<BrightScriptParser::ComponentHeadContext>(i);
}

std::vector<BrightScriptParser::ComponentBodyContext *> BrightScriptParser::StartRuleContext::componentBody() {
  return getRuleContexts<BrightScriptParser::ComponentBodyContext>();
}

BrightScriptParser::ComponentBodyContext* BrightScriptParser::StartRuleContext::componentBody(size_t i) {
  return getRuleContext<BrightScriptParser::ComponentBodyContext>(i);
}


size_t BrightScriptParser::StartRuleContext::getRuleIndex() const {
  return BrightScriptParser::RuleStartRule;
}

void BrightScriptParser::StartRuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BrightScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStartRule(this);
}

void BrightScriptParser::StartRuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BrightScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStartRule(this);
}


antlrcpp::Any BrightScriptParser::StartRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BrightScriptVisitor*>(visitor))
    return parserVisitor->visitStartRule(this);
  else
    return visitor->visitChildren(this);
}

BrightScriptParser::StartRuleContext* BrightScriptParser::startRule() {
  StartRuleContext *_localctx = _tracker.createInstance<StartRuleContext>(_ctx, getState());
  enterRule(_localctx, 0, BrightScriptParser::RuleStartRule);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(123);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(120);
        componentHead(); 
      }
      setState(125);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(129);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 23) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 23)) & ((1ULL << (BrightScriptParser::FUNCTION - 23))
      | (1ULL << (BrightScriptParser::SUB - 23))
      | (1ULL << (BrightScriptParser::COMMENT - 23))
      | (1ULL << (BrightScriptParser::NEWLINE - 23)))) != 0)) {
      setState(126);
      componentBody();
      setState(131);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(132);
    match(BrightScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentHeadContext ------------------------------------------------------------------

BrightScriptParser::ComponentHeadContext::ComponentHeadContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BrightScriptParser::ComponentHeadElementContext *> BrightScriptParser::ComponentHeadContext::componentHeadElement() {
  return getRuleContexts<BrightScriptParser::ComponentHeadElementContext>();
}

BrightScriptParser::ComponentHeadElementContext* BrightScriptParser::ComponentHeadContext::componentHeadElement(size_t i) {
  return getRuleContext<BrightScriptParser::ComponentHeadElementContext>(i);
}

std::vector<BrightScriptParser::EndOfLineContext *> BrightScriptParser::ComponentHeadContext::endOfLine() {
  return getRuleContexts<BrightScriptParser::EndOfLineContext>();
}

BrightScriptParser::EndOfLineContext* BrightScriptParser::ComponentHeadContext::endOfLine(size_t i) {
  return getRuleContext<BrightScriptParser::EndOfLineContext>(i);
}


size_t BrightScriptParser::ComponentHeadContext::getRuleIndex() const {
  return BrightScriptParser::RuleComponentHead;
}

void BrightScriptParser::ComponentHeadContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BrightScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponentHead(this);
}

void BrightScriptParser::ComponentHeadContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BrightScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponentHead(this);
}


antlrcpp::Any BrightScriptParser::ComponentHeadContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BrightScriptVisitor*>(visitor))
    return parserVisitor->visitComponentHead(this);
  else
    return visitor->visitChildren(this);
}

BrightScriptParser::ComponentHeadContext* BrightScriptParser::componentHead() {
  ComponentHeadContext *_localctx = _tracker.createInstance<ComponentHeadContext>(_ctx, getState());
  enterRule(_localctx, 2, BrightScriptParser::RuleComponentHead);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(137);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(134);
        endOfLine(); 
      }
      setState(139);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
    setState(140);
    componentHeadElement();
    setState(150);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(142); 
        _errHandler->sync(this);
        alt = 1;
        do {
          switch (alt) {
            case 1: {
                  setState(141);
                  endOfLine();
                  break;
                }

          default:
            throw NoViableAltException(this);
          }
          setState(144); 
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
        } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
        setState(146);
        componentHeadElement(); 
      }
      setState(152);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
    setState(156);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(153);
        endOfLine(); 
      }
      setState(158);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentHeadElementContext ------------------------------------------------------------------

BrightScriptParser::ComponentHeadElementContext::ComponentHeadElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BrightScriptParser::LibraryStatementContext* BrightScriptParser::ComponentHeadElementContext::libraryStatement() {
  return getRuleContext<BrightScriptParser::LibraryStatementContext>(0);
}

BrightScriptParser::ConditionalCompilationStatementContext* BrightScriptParser::ComponentHeadElementContext::conditionalCompilationStatement() {
  return getRuleContext<BrightScriptParser::ConditionalCompilationStatementContext>(0);
}

BrightScriptParser::CommentContext* BrightScriptParser::ComponentHeadElementContext::comment() {
  return getRuleContext<BrightScriptParser::CommentContext>(0);
}


size_t BrightScriptParser::ComponentHeadElementContext::getRuleIndex() const {
  return BrightScriptParser::RuleComponentHeadElement;
}

void BrightScriptParser::ComponentHeadElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BrightScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponentHeadElement(this);
}

void BrightScriptParser::ComponentHeadElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BrightScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponentHeadElement(this);
}


antlrcpp::Any BrightScriptParser::ComponentHeadElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BrightScriptVisitor*>(visitor))
    return parserVisitor->visitComponentHeadElement(this);
  else
    return visitor->visitChildren(this);
}

BrightScriptParser::ComponentHeadElementContext* BrightScriptParser::componentHeadElement() {
  ComponentHeadElementContext *_localctx = _tracker.createInstance<ComponentHeadElementContext>(_ctx, getState());
  enterRule(_localctx, 4, BrightScriptParser::RuleComponentHeadElement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(162);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BrightScriptParser::LIBRARY: {
        enterOuterAlt(_localctx, 1);
        setState(159);
        libraryStatement();
        break;
      }

      case BrightScriptParser::CONDITIONAL_CONST:
      case BrightScriptParser::CONDITIONAL_ERROR:
      case BrightScriptParser::CONDITIONAL_IF: {
        enterOuterAlt(_localctx, 2);
        setState(160);
        conditionalCompilationStatement();
        break;
      }

      case BrightScriptParser::COMMENT: {
        enterOuterAlt(_localctx, 3);
        setState(161);
        comment();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentBodyContext ------------------------------------------------------------------

BrightScriptParser::ComponentBodyContext::ComponentBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BrightScriptParser::ComponentBodyElementContext *> BrightScriptParser::ComponentBodyContext::componentBodyElement() {
  return getRuleContexts<BrightScriptParser::ComponentBodyElementContext>();
}

BrightScriptParser::ComponentBodyElementContext* BrightScriptParser::ComponentBodyContext::componentBodyElement(size_t i) {
  return getRuleContext<BrightScriptParser::ComponentBodyElementContext>(i);
}

std::vector<BrightScriptParser::EndOfLineContext *> BrightScriptParser::ComponentBodyContext::endOfLine() {
  return getRuleContexts<BrightScriptParser::EndOfLineContext>();
}

BrightScriptParser::EndOfLineContext* BrightScriptParser::ComponentBodyContext::endOfLine(size_t i) {
  return getRuleContext<BrightScriptParser::EndOfLineContext>(i);
}


size_t BrightScriptParser::ComponentBodyContext::getRuleIndex() const {
  return BrightScriptParser::RuleComponentBody;
}

void BrightScriptParser::ComponentBodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BrightScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponentBody(this);
}

void BrightScriptParser::ComponentBodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BrightScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponentBody(this);
}


antlrcpp::Any BrightScriptParser::ComponentBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BrightScriptVisitor*>(visitor))
    return parserVisitor->visitComponentBody(this);
  else
    return visitor->visitChildren(this);
}

BrightScriptParser::ComponentBodyContext* BrightScriptParser::componentBody() {
  ComponentBodyContext *_localctx = _tracker.createInstance<ComponentBodyContext>(_ctx, getState());
  enterRule(_localctx, 6, BrightScriptParser::RuleComponentBody);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(167);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BrightScriptParser::COMMENT

    || _la == BrightScriptParser::NEWLINE) {
      setState(164);
      endOfLine();
      setState(169);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(170);
    componentBodyElement();
    setState(180);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(172); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(171);
          endOfLine();
          setState(174); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == BrightScriptParser::COMMENT

        || _la == BrightScriptParser::NEWLINE);
        setState(176);
        componentBodyElement(); 
      }
      setState(182);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
    setState(186);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(183);
        endOfLine(); 
      }
      setState(188);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentBodyElementContext ------------------------------------------------------------------

BrightScriptParser::ComponentBodyElementContext::ComponentBodyElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BrightScriptParser::FunctionDeclarationContext* BrightScriptParser::ComponentBodyElementContext::functionDeclaration() {
  return getRuleContext<BrightScriptParser::FunctionDeclarationContext>(0);
}

BrightScriptParser::SubDeclarationContext* BrightScriptParser::ComponentBodyElementContext::subDeclaration() {
  return getRuleContext<BrightScriptParser::SubDeclarationContext>(0);
}


size_t BrightScriptParser::ComponentBodyElementContext::getRuleIndex() const {
  return BrightScriptParser::RuleComponentBodyElement;
}

void BrightScriptParser::ComponentBodyElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BrightScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponentBodyElement(this);
}

void BrightScriptParser::ComponentBodyElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BrightScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponentBodyElement(this);
}


antlrcpp::Any BrightScriptParser::ComponentBodyElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BrightScriptVisitor*>(visitor))
    return parserVisitor->visitComponentBodyElement(this);
  else
    return visitor->visitChildren(this);
}

BrightScriptParser::ComponentBodyElementContext* BrightScriptParser::componentBodyElement() {
  ComponentBodyElementContext *_localctx = _tracker.createInstance<ComponentBodyElementContext>(_ctx, getState());
  enterRule(_localctx, 8, BrightScriptParser::RuleComponentBodyElement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(191);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BrightScriptParser::FUNCTION: {
        enterOuterAlt(_localctx, 1);
        setState(189);
        functionDeclaration();
        break;
      }

      case BrightScriptParser::SUB: {
        enterOuterAlt(_localctx, 2);
        setState(190);
        subDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------
